--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "^4.15.3",
     "express-session": "^1.15.3",
     "express-sessions": "^1.0.6",
+    "express-validator": "^3.2.0",
     "fs-extra": "^3.0.1",
     "mustache-express": "^1.2.4",
     "parseurl": "^1.3.1"
